# OtterML

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Config.cmake  Macros.cmake
include/OtterML/: Angle.hpp  Common.hpp  FixedPoint.hpp  Input.hpp  Matrix.hpp  OpenGL.hpp  Renderer.hpp  Shader.hpp  Texture2D.hpp  Transform2D.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Window.hpp
include/OtterML/Graphics/: Color.hpp  Shader.hpp  Texture2D.hpp  Transform.hpp  Transform2D.hpp
include/OtterML/System/: Angle.hpp  FixedPoint.hpp  Matrix.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/glad/: gl.h
lib/glad/include/glad/: gl.h  gles1.h
lib/win64/include/glad/: gl.h
lib/win64/lib/cmake/yaml-cpp/: yaml-cpp-targets.cmake
lib/win64/lib/pkgconfig/: spdlog.pc  yaml-cpp.pc
src/OtterML/: Angle.cpp  CMakeLists.txt  Color.cpp  FixedPoint.cpp  Matrix.cpp  PCH.hpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  Transform2D.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/OtterML/Graphics/: CMakeLists.txt  Color.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  Transform.cpp  Transform2D.cpp
src/OtterML/System/: Angle.cpp  CMakeLists.txt  FixedPoint.cpp  Matrix.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
